FEAT> se terminaron las tasks 1.2 y 1.3

--- a/Laboratorio05/lab05.ipynb
+++ b/Laboratorio05/lab05.ipynb
@@ -35,7 +35,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from PIL import Image\n",
+    "import math\n",
+    "from collections import deque"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -50,11 +63,6 @@
     }
    ],
    "source": [
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "from PIL import Image\n",
-    "\n",
-    "\n",
     "def load_maze(image_path, cell_size):\n",
     "    img = Image.open(image_path).convert(\"RGB\")\n",
     "    width, height = img.size\n",
@@ -127,10 +135,104 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from abc import ABC, abstractmethod\n",
+    "\n",
+    "\n",
+    "class SearchProblem(ABC):\n",
+    "    \"\"\"\n",
+    "    Clase abstracta para definir un problema de búsqueda.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    @abstractmethod\n",
+    "    def initial_state(self):\n",
+    "        \"\"\"Retorna el estado inicial\"\"\"\n",
+    "        pass\n",
+    "\n",
+    "    @abstractmethod\n",
+    "    def goal_test(self, state):\n",
+    "        \"\"\"Verifica si el estado dado es un estado meta\"\"\"\n",
+    "        pass\n",
+    "\n",
+    "    @abstractmethod\n",
+    "    def actions(self, state):\n",
+    "        \"\"\"Retorna la lista de acciones disponibles en un estado\"\"\"\n",
+    "        pass\n",
+    "\n",
+    "    @abstractmethod\n",
+    "    def step_cost(self, state, action, next_state):\n",
+    "        \"\"\"Retorna el costo de moverse de state a next_state con action\"\"\"\n",
+    "        pass\n",
+    "\n",
+    "    @abstractmethod\n",
+    "    def result(self, state, action):\n",
+    "        \"\"\"Retorna el nuevo estado tras aplicar una acción\"\"\"\n",
+    "        pass\n",
+    "\n",
+    "\n",
+    "class MazeProblem(SearchProblem):\n",
+    "    def __init__(self, maze):\n",
+    "        \"\"\"\n",
+    "        Recibe una matriz discreta del laberinto.\n",
+    "        0 -> Camino libre\n",
+    "        1 -> Pared\n",
+    "        2 -> Meta\n",
+    "        3 -> Inicio\n",
+    "        \"\"\"\n",
+    "        self.maze = maze\n",
+    "        self.height, self.width = maze.shape\n",
+    "        self.start = None\n",
+    "        self.goals = []\n",
+    "\n",
+    "        # Buscar el inicio y las metas en la matriz\n",
+    "        for i in range(self.height):\n",
+    "            for j in range(self.width):\n",
+    "                if maze[i, j] == 3:\n",
+    "                    self.start = (i, j)\n",
+    "                elif maze[i, j] == 2:\n",
+    "                    self.goals.append((i, j))\n",
+    "\n",
+    "    def initial_state(self):\n",
+    "        return self.start\n",
+    "\n",
+    "    def goal_test(self, state):\n",
+    "        return state in self.goals\n",
+    "\n",
+    "    def actions(self, state):\n",
+    "        \"\"\"Retorna las acciones posibles: Arriba, Abajo, Izquierda, Derecha\"\"\"\n",
+    "        x, y = state\n",
+    "        possible_actions = []\n",
+    "\n",
+    "        if x > 0 and self.maze[x - 1, y] != 1:\n",
+    "            possible_actions.append(\"UP\")\n",
+    "        if x < self.height - 1 and self.maze[x + 1, y] != 1:\n",
+    "            possible_actions.append(\"DOWN\")\n",
+    "        if y > 0 and self.maze[x, y - 1] != 1:\n",
+    "            possible_actions.append(\"LEFT\")\n",
+    "        if y < self.width - 1 and self.maze[x, y + 1] != 1:\n",
+    "            possible_actions.append(\"RIGHT\")\n",
+    "\n",
+    "        return possible_actions\n",
+    "\n",
+    "    def step_cost(self, state, action, next_state):\n",
+    "        return 1  # Cada movimiento tiene un costo de 1\n",
+    "\n",
+    "    def result(self, state, action):\n",
+    "        \"\"\"Devuelve el nuevo estado tras aplicar una acción\"\"\"\n",
+    "        x, y = state\n",
+    "        if action == \"UP\":\n",
+    "            return (x - 1, y)\n",
+    "        elif action == \"DOWN\":\n",
+    "            return (x + 1, y)\n",
+    "        elif action == \"LEFT\":\n",
+    "            return (x, y - 1)\n",
+    "        elif action == \"RIGHT\":\n",
+    "            return (x, y + 1)\n",
+    "        return state"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -141,16 +243,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def breadth_first_search(problem):\n",
+    "    frontier = deque([problem.initial_state()])\n",
+    "    explored = set()\n",
+    "\n",
+    "    while frontier:\n",
+    "        state = frontier.popleft()\n",
+    "        if problem.goal_test(state):\n",
+    "            return state\n",
+    "        explored.add(state)\n",
+    "        for action in problem.actions(state):\n",
+    "            next_state = problem.result(state, action)\n",
+    "            if next_state not in explored and next_state not in frontier:\n",
+    "                frontier.append(next_state)\n",
+    "    return None\n",
+    "\n",
+    "\n",
+    "def depth_first_search(problem):\n",
+    "    frontier = [problem.initial_state()]\n",
+    "    explored = set()\n",
+    "\n",
+    "    while frontier:\n",
+    "        state = frontier.pop()\n",
+    "        if problem.goal_test(state):\n",
+    "            return state\n",
+    "        explored.add(state)\n",
+    "        for action in problem.actions(state):\n",
+    "            next_state = problem.result(state, action)\n",
+    "            if next_state not in explored and next_state not in frontier:\n",
+    "                frontier.append(next_state)\n",
+    "    return None\n",
+    "\n",
+    "\n",
+    "def heuristic_manhattan(state, goal):\n",
+    "    return abs(state[0] - goal[0]) + abs(state[1] - goal[1])\n",
+    "\n",
+    "\n",
+    "def heuristic_euclidean(state, goal):\n",
+    "    return math.sqrt((state[0] - goal[0]) ** 2 + (state[1] - goal[1]) ** 2)\n",
+    "\n",
+    "\n",
+    "def a_star_search(problem, heuristic):\n",
+    "    goal = problem.goals[0]  # Asumimos una única meta para simplificar\n",
+    "    frontier = [(0, problem.initial_state())]\n",
+    "    explored = set()\n",
+    "\n",
+    "    while frontier:\n",
+    "        _, state = heapq.heappop(frontier)\n",
+    "        if problem.goal_test(state):\n",
+    "            return state\n",
+    "        explored.add(state)\n",
+    "        for action in problem.actions(state):\n",
+    "            next_state = problem.result(state, action)\n",
+    "            cost = problem.step_cost(state, action, next_state) + heuristic(\n",
+    "                next_state, goal\n",
+    "            )\n",
+    "            if next_state not in explored:\n",
+    "                heapq.heappush(frontier, (cost, next_state))\n",
+    "    return None"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Justifique la elección de estas heurísticas\n"
+    "### Justifique la elección de estas heurísticas\n",
+    "\n",
+    "La heurística de Manhattan se utiliza cuando el movimiento está restringido a direcciones ortogonales (arriba, abajo, izquierda, derecha), ya que mide el número mínimo de pasos necesarios en una cuadrícula y es admisible y consistente, lo que la hace ideal para laberintos sin diagonales.\n",
+    "\n",
+    "Por otro lado, la heurística Euclidiana es más adecuada cuando se permiten movimientos diagonales, ya que calcula la distancia real entre dos puntos en un espacio continuo, proporcionando una estimación más precisa del costo.\n",
+    "\n",
+    "Sabiendo esto, ambas heurísticas cumplen con los requisitos para A\\*, pero en un laberinto tradicional, Manhattan es la mejor opción porque refleja fielmente el costo del camino más corto dentro de una cuadrícula ortogonal.\n"
    ]
   },
   {
