FIX: Se arreglaron los colores del laberinto

--- a/Laboratorio05/lab05.ipynb
+++ b/Laboratorio05/lab05.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -101,6 +101,14 @@
     "\n",
     "# Crear la figura para mostrar las imágenes en formato cuadrado\n",
     "fig, axes = plt.subplots(2, 2, figsize=(10, 10))\n",
+    "\n",
+    "# Crear un mapa de colores personalizado\n",
+    "colors = {\n",
+    "    0: (1, 1, 1),  # Blanco (camino libre)\n",
+    "    1: (0, 0, 0),  # Negro (pared)\n",
+    "    2: (0, 1, 0),  # Verde (meta)\n",
+    "    3: (1, 0, 0),  # Rojo (inicio)\n",
+    "}\n",
     "\n",
     "# Iterar sobre las imágenes y renderizarlas\n",
     "for idx, image_path in enumerate(image_files):\n",
